Fixes invisible input text in Firefox.
Closes #72.

--- a/styles/service-sidebar.less
+++ b/styles/service-sidebar.less
@@ -60,11 +60,11 @@
 
     input {
       width: 100%;
-      padding: 12px 8px;
+      padding: 2px 8px;
       display: inline-block;
       margin-top: 7px;
       margin-top: @search-input-margin-top;
-      height: 24px;
+      height: 26px;
       border-radius: 12px;
       background-color: @white;
       color: #000;
